# gr00t_research

./: .gitignore  PIPER_INFERENCE_GUIDE.md  SESSION_SUMMARY.md  pi0_ros2_ref1.py  pi0_ros2_ref2.py  pyproject.toml
 /piper_pick_place/data/chunk-000/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet  episode_000005.parquet  episode_000006.parquet  episode_000007.parquet  episode_000008.parquet  episode_000009.parquet  episode_000010.parquet  (+19 more)
 /piper_pick_place/meta/: episodes.jsonl  info.json  modality.json  tasks.jsonl
examples/Piper/: piper_config.py
examples/robocasa/: robocasa_config.py
getting_started/: piper_gr00t_integration.md
gr00t/configs/: finetune_config.py
gr00t/configs/data/: data_config.py
gr00t/data/chunk/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet
gr00t/experiment/: launch_finetune.py
gr00t/model/modules/: eagle_backbone.py
ros2_ws/: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/gr00t_piper_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/gr00t_piper_bridge/gr00t_piper_bridge/: piper_bridge_node.py
scripts/: augment_brightness_lerobot.py  piper_clean_raw_datasets.py  piper_convert_hdf5_to_lerobot.py  piper_convert_multi_hdf5.py  piper_convert_to_groot_format.py  piper_prep_456.py
scripts/deployment/: gr00t_chunk_attention_debug.py  gr00t_piper_inference_server.py
scripts/ros2/: gr00t_ros2_inference_node.py  piper_bridge.launch.py  piper_gr00t_ros2_bridge.py
(+8 files in other folders)
