<?xml version="1.0"?>
<package format="3">
  <name>gr00t_piper_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge node that forwards Piper observations to a GR00T inference server and publishes action chunks back to Piper.</description>
  <maintainer email="lbj@example.com">lbj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-msgpack</exec_depend>
  <exec_depend>python3-msgpack-numpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
